# sample_posix

./: CMakeLists.txt  toolchain.cmake
src/: main.c
